# AccountManager

./: .gitignore  pyproject.toml
config/: celery.py  settings.py
src/manager/: apps.py  service.py  tasks.py
