[tool.poetry]
name = "accountmanager"
version = "0.1.0"
description = ""
authors = ["ermakoventer <ermakoventer777@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.3"
djangorestframework = "^3.14.0"
celery = "^5.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
